--- a/src/cssComponents/AdminManagement.css
+++ b/src/cssComponents/AdminManagement.css
@@ -95,3 +95,14 @@ h2 {
   margin-bottom: 80px;
 
 }
+.ButtonBack {
+  background: var(--color_primario);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-bottom: 80px;
+  margin-left: 10px;
+}
