--- a/src/cssComponents/NavBurguer.css
+++ b/src/cssComponents/NavBurguer.css
@@ -28,10 +28,11 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 img {
-    width: 70px;
-    height: 65px;
-    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    margin-top: -15px;
 }
 
 a {
